--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumLocationTests-iOS.xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumLocationTests-iOS.xcscheme
@@ -35,6 +35,13 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "TEST"
+            value = "true"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
