--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumCoreTests-iOS.xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumCoreTests-iOS.xcscheme
@@ -13,7 +13,9 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D788A47F231970B900BC6D60"
