--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcbaselines/D788A47F231970B900BC6D60.xcbaseline/Info.plist
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcbaselines/D788A47F231970B900BC6D60.xcbaseline/Info.plist
@@ -78,6 +78,37 @@
 				<string>com.apple.platform.iphonesimulator</string>
 			</dict>
 		</dict>
+		<key>8E37B04D-F6A8-4647-9B49-D169FC4855DC</key>
+		<dict>
+			<key>localComputer</key>
+			<dict>
+				<key>busSpeedInMHz</key>
+				<integer>400</integer>
+				<key>cpuCount</key>
+				<integer>1</integer>
+				<key>cpuKind</key>
+				<string>8-Core Intel Core i9</string>
+				<key>cpuSpeedInMHz</key>
+				<integer>2400</integer>
+				<key>logicalCPUCoresPerPackage</key>
+				<integer>16</integer>
+				<key>modelCode</key>
+				<string>MacBookPro16,1</string>
+				<key>physicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.macosx</string>
+			</dict>
+			<key>targetArchitecture</key>
+			<string>x86_64</string>
+			<key>targetDevice</key>
+			<dict>
+				<key>modelCode</key>
+				<string>iPhone12,3</string>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.iphonesimulator</string>
+			</dict>
+		</dict>
 		<key>B318FE66-3205-4CB1-B6DE-823861850EBA</key>
 		<dict>
 			<key>localComputer</key>
