--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcbaselines/D788A47F231970B900BC6D60.xcbaseline/Info.plist
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcbaselines/D788A47F231970B900BC6D60.xcbaseline/Info.plist
@@ -47,6 +47,18 @@
 				<string>com.apple.platform.iphonesimulator</string>
 			</dict>
 		</dict>
+		<key>7373668E-8E84-45AE-A3C5-FBA3A219F328</key>
+		<dict>
+			<key>targetArchitecture</key>
+			<string>arm64</string>
+			<key>targetDevice</key>
+			<dict>
+				<key>modelCode</key>
+				<string>iPhone8,4</string>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.iphoneos</string>
+			</dict>
+		</dict>
 		<key>8AD98E7F-0730-412D-A58E-F6B40888AB8B</key>
 		<dict>
 			<key>localComputer</key>
