--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumRemoteCommandsTests-iOS.xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumRemoteCommandsTests-iOS.xcscheme
@@ -10,7 +10,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D7B04D08219994D400C87E22"
+            BuildableName = "TealiumRemoteCommands.framework"
+            BlueprintName = "TealiumRemoteCommands"
+            ReferencedContainer = "container:tealium-swift.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
