--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/WatchOSTestBed WatchKit App (Notification).xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/WatchOSTestBed WatchKit App (Notification).xcscheme
@@ -55,7 +55,7 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "8"
-      notificationPayloadFile = "WatchOSTestHost Extension/PushNotificationPayload.apns">
+      notificationPayloadFile = "WatchOSTestBed WatchKit Extension/PushNotificationPayload.apns">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.Carousel"
@@ -76,7 +76,7 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "8"
-      notificationPayloadFile = "WatchOSTestHost Extension/PushNotificationPayload.apns">
+      notificationPayloadFile = "WatchOSTestBed WatchKit Extension/PushNotificationPayload.apns">
       <RemoteRunnable
          runnableDebuggingMode = "2"
          BundleIdentifier = "com.apple.Carousel"
