--- a/builder/SwiftTestbed/Info.plist
+++ b/builder/SwiftTestbed/Info.plist
@@ -23,14 +23,14 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<true/>
+		<false/>
 	</dict>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>When In Use Location Permission</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Always In Use Location Permission</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>When In Use Location Permission</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
