Xcframework script + sample apps update (#208)
* sample apps wip

* update podspec

* update project structure

* update sample app

* update sample app

* sample apps

* fix slider

* xcframeworks script and fixes

* xcframeworks script and fixes

Co-authored-by: Christina <christina.sund@tealium.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ Cartfile.resolved
 Pods/
 build/
 .swiftpm/*
+TealiumBinary/
+TealiumBinary.zip
+builder/TealiumBinary/
+builder/TealiumBinary.zip
+build/
+builder/build/
