Location and sample app (#215)
* Updated naming and fixed location in sample app

* Updated unit tests

Co-authored-by: Christina <christina.sund@tealium.com>

--- a/samples/TealiumSwiftExample/TealiumSwiftExample/Info.plist
+++ b/samples/TealiumSwiftExample/TealiumSwiftExample/Info.plist
@@ -56,5 +56,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This is an example of using the LocationModule to request always authorization.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This is an example of using the LocationModule to request when in use authorization.</string>
 </dict>
 </plist>
