Dispatch to Event (#217)
Co-authored-by: Christina <christina.sund@tealium.com>

--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/WatchOSTestBed WatchKit App (Notification).xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/WatchOSTestBed WatchKit App (Notification).xcscheme
@@ -56,10 +56,8 @@
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "8"
       notificationPayloadFile = "WatchOSTestBed WatchKit Extension/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/WatchOSTestBed WatchKit App">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D72E8C122361E50100BA3786"
@@ -67,7 +65,7 @@
             BlueprintName = "WatchOSTestBed WatchKit App"
             ReferencedContainer = "container:tealium-swift.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -77,10 +75,8 @@
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "8"
       notificationPayloadFile = "WatchOSTestBed WatchKit Extension/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/WatchOSTestBed WatchKit App">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D72E8C122361E50100BA3786"
@@ -88,16 +84,7 @@
             BlueprintName = "WatchOSTestBed WatchKit App"
             ReferencedContainer = "container:tealium-swift.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D72E8C122361E50100BA3786"
-            BuildableName = "WatchOSTestBed WatchKit App.app"
-            BlueprintName = "WatchOSTestBed WatchKit App"
-            ReferencedContainer = "container:tealium-swift.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
