--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/WatchOSTestBed WatchKit App.xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/WatchOSTestBed WatchKit App.xcscheme
@@ -54,10 +54,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/WatchOSTestBed WatchKit App">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D72E8C122361E50100BA3786"
@@ -65,7 +63,7 @@
             BlueprintName = "WatchOSTestBed WatchKit App"
             ReferencedContainer = "container:tealium-swift.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,10 +71,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/WatchOSTestBed WatchKit App">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D72E8C122361E50100BA3786"
@@ -84,16 +80,7 @@
             BlueprintName = "WatchOSTestBed WatchKit App"
             ReferencedContainer = "container:tealium-swift.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D72E8C122361E50100BA3786"
-            BuildableName = "WatchOSTestBed WatchKit App.app"
-            BlueprintName = "WatchOSTestBed WatchKit App"
-            ReferencedContainer = "container:tealium-swift.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
