--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/WatchOSTestBed WatchKit App.xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/WatchOSTestBed WatchKit App.xcscheme
@@ -54,8 +54,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/WatchOSTestBed WatchKit App">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D72E8C122361E50100BA3786"
@@ -63,7 +65,7 @@
             BlueprintName = "WatchOSTestBed WatchKit App"
             ReferencedContainer = "container:tealium-swift.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -71,8 +73,10 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/WatchOSTestBed WatchKit App">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D72E8C122361E50100BA3786"
@@ -80,7 +84,16 @@
             BlueprintName = "WatchOSTestBed WatchKit App"
             ReferencedContainer = "container:tealium-swift.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D72E8C122361E50100BA3786"
+            BuildableName = "WatchOSTestBed WatchKit App.app"
+            BlueprintName = "WatchOSTestBed WatchKit App"
+            ReferencedContainer = "container:tealium-swift.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
