Feature/auto deeplink (#230)
* auto trace

* fixed memory leaks

* swizzle

* fixed memory leaks

* removed extra file

* remove logger from helper

* remove logger from helper

* wip

* appdelegate proxy

* added continueUserActivity

* minor fixes

* minor fixes

* updated appdelegate

* tests

--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/SwiftTestBed.xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/SwiftTestBed.xcscheme
@@ -51,6 +51,13 @@
             ReferencedContainer = "container:tealium-swift.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocStackLogging"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Debug"
