--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumCoreTests-iOS.xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumCoreTests-iOS.xcscheme
@@ -15,6 +15,7 @@
       <Testables>
          <TestableReference
             skipped = "NO"
+            parallelizable = "YES"
             testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
