Adding GitHub CI Unit Testing (#227)
* Added CICD configuration file and separated unit/integration tests

* Update signing for test schemes

* Update test schemes

* testing

* update unit tests

* Updates to tests and project settings

* formatting

* :construction_worker: Added tests for CICD

Updated unit tests and project settings for CICD compliance

* :green_heart: Fix unit tests

Fix module manager unit tests failing within CI environment

* :green_heart: Fix unit tests

Fix module manager unit tests failing within CI environment

* Update module manager test

* Fix formatting of yml

* Run lifeycle tests

* Location tests

* Visitor service tests

* :sparkles: Adding GitHub CI Unit Testing

* Fix modules manager tests

* Fix tag managemnt tests

* Add test file

* Updated tag management tests

* :fire: Removed extra .plist files

* public extension double

* added job timeout

* removed parallel exec order

* Saving changes to merge

* :construction_worker: Split tests into different schemes

* Update core tests

* Update swift.yml

* Update swift.yml

* Test one more script run

* Remove thread tests

* Updated unit tests

Co-authored-by: Christina <christina.sund@tealium.com>
Co-authored-by: craigrouse <craig.rouse@gmail.com>

--- a/project.yml
+++ b/project.yml
@@ -159,6 +159,48 @@ targets:
     dependencies:
       - target: TealiumCore
       - target: TealiumCollect
+  TealiumConnectivityTests-iOS:
+    type: bundle.unit-test
+    platform: iOS
+    sources:
+      - path: support/tests/test_tealium_core
+        buildPhase: sources
+      - path: support/tests/TestTealiumHelper.swift
+        buildPhase: sources
+    settings:
+      base:
+        CODE_SIGN_STYLE: "Manual"
+        DEVELOPMENT_TEAM: ""
+    dependencies:
+      - target: TealiumCore
+  TealiumConnectivityTests-macOS:
+    type: bundle.unit-test
+    platform: macOS
+    sources:
+      - path: support/tests/test_tealium_core
+        buildPhase: sources
+      - path: support/tests/TestTealiumHelper.swift
+        buildPhase: sources
+    settings:
+      base:
+        CODE_SIGN_STYLE: "Manual"
+        DEVELOPMENT_TEAM: ""
+    dependencies:
+      - target: TealiumCore
+  TealiumConnectivityTests-tvOS:
+    type: bundle.unit-test
+    platform: tvOS
+    sources:
+      - path: support/tests/test_tealium_core
+        buildPhase: sources
+      - path: support/tests/TestTealiumHelper.swift
+        buildPhase: sources
+    settings:
+      base:
+        CODE_SIGN_STYLE: "Manual"
+        DEVELOPMENT_TEAM: ""
+    dependencies:
+      - target: TealiumCore    
   TealiumCore:
     type: framework
     platform: iOS
@@ -220,7 +262,7 @@ targets:
       - path: support/tests/TestTealiumHelper.swift
         buildPhase: sources
       - path: support/tests/test_tealium_core/datalayer/large-event-data.json
-        buildPhase: resources
+        buildPhase: resources       
     settings:
       base:
         CODE_SIGN_STYLE: "Manual"
@@ -243,7 +285,7 @@ targets:
       - path: support/tests/TestTealiumHelper.swift
         buildPhase: sources
       - path: support/tests/test_tealium_core/datalayer/large-event-data.json
-        buildPhase: resources
+        buildPhase: resources       
     settings:
       base:
         CODE_SIGN_STYLE: "Manual"
@@ -502,9 +544,7 @@ targets:
       - path: support/tests/test_tealium_visitorservice/stubs/visitor-nils.json
         buildPhase: resources
       - path: support/tests/test_tealium_visitorservice/stubs/visitor.json
-        buildPhase: resources
-      - path: support/tests/test_tealium_visitorservice/stubs/big-visitor.json
-        buildPhase: resources         
+        buildPhase: resources        
     settings:
       base:
         CODE_SIGN_STYLE: "Manual"
@@ -527,9 +567,7 @@ targets:
       - path: support/tests/test_tealium_visitorservice/stubs/visitor-nils.json
         buildPhase: resources
       - path: support/tests/test_tealium_visitorservice/stubs/visitor.json
-        buildPhase: resources
-      - path: support/tests/test_tealium_visitorservice/stubs/big-visitor.json
-        buildPhase: resources         
+        buildPhase: resources       
     settings:
       base:
         CODE_SIGN_STYLE: "Manual"
@@ -552,9 +590,7 @@ targets:
       - path: support/tests/test_tealium_visitorservice/stubs/visitor-nils.json
         buildPhase: resources
       - path: support/tests/test_tealium_visitorservice/stubs/visitor.json
-        buildPhase: resources
-      - path: support/tests/test_tealium_visitorservice/stubs/big-visitor.json
-        buildPhase: resources        
+        buildPhase: resources       
     settings:
       base:
         CODE_SIGN_STYLE: "Manual"
