--- a/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumTagManagementIntegrationTests-iOS.xcscheme
+++ b/builder/tealium-swift.xcodeproj/xcshareddata/xcschemes/TealiumTagManagementIntegrationTests-iOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1100"
+   LastUpgradeVersion = "1200"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -10,17 +10,15 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            testExecutionOrdering = "random">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D788A47F231970B900BC6D60"
-               BuildableName = "TealiumCoreTests-iOS.xctest"
-               BlueprintName = "TealiumCoreTests-iOS"
+               BlueprintIdentifier = "CF9F426924F435F3009B93C2"
+               BuildableName = "TealiumTagManagementIntegrationTests-iOS.xctest"
+               BlueprintName = "TealiumTagManagementIntegrationTests-iOS"
                ReferencedContainer = "container:tealium-swift.xcodeproj">
             </BuildableReference>
          </TestableReference>
